--- a/src/app/components/page-dashboard/page-dashboard.component.scss
+++ b/src/app/components/page-dashboard/page-dashboard.component.scss
@@ -2,3 +2,4 @@
 @import '../../../styles/responsive-tiles';
 @import '../../../styles/scrollable-container';
 @import '../../../styles/statistics';
+@import '../../../styles/column-list';
