--- a/src/app/components/page-dashboard/page-dashboard.component.scss
+++ b/src/app/components/page-dashboard/page-dashboard.component.scss
@@ -3,3 +3,13 @@
 @import '../../../styles/scrollable-container';
 @import '../../../styles/statistics';
 @import '../../../styles/column-list';
+@import '../../../styles/photos-list';
+
+
+:host {
+    .page-dashboard {
+        &__photos-wrapper {
+            margin: 5px;
+        }
+    }
+}
