--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,7 +1,17 @@
+@import '../styles/special/mixins';
+
 .page {
     display: flex;
     flex-direction: column;
-    --side-space: 80px;
+    --side-space: 10px;
+
+    @include respond-to('small') {
+        --side-space: 30px;
+    }
+
+    @include respond-to('medium') {
+        --side-space: 80px;
+    }
 
     &__content {
         flex-grow: 1;
