--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<header class="app-layout__mobile-header">
+    <app-burger></app-burger>
+</header>
 <main class="app-layout__main">
     <div class="app-layout__side-menu-wrapper">
         <app-side-menu></app-side-menu>
