--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header class="app-layout__mobile-header">
     <app-burger></app-burger>
+    <h1 class="app-layout__mobile-title">My App</h1>
 </header>
 <main class="app-layout__main">
     <div class="app-layout__side-menu-wrapper"
