--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -10,12 +10,25 @@
         flex-grow: 1;
         display: flex;
         align-items: stretch;
+        position: relative;
     }
 
     &__side-menu-wrapper {
-        display: none;
+        display: flex;
         flex: 250px 0 0;
         flex-direction: column;
+        transform: translateX(-100%);
+        transition: transform 0.3s linear;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 300px;
+        z-index: 1;
+
+        &--opened {
+            transform: translateX(0);
+        }
 
         & > * {
             display: block;
@@ -23,7 +36,10 @@
         }
 
         @include respond-to('small') {
-            display: flex;
+            transform: translateX(0);
+            position: static;
+            height: auto;
+            width: auto;
         }
     }
 
@@ -57,10 +73,19 @@
     }
 
     &__mobile-header {
+        user-select: none;
+        display: flex;
+        align-items: center;
+        z-index: 1;
         background: var(--bs-gray-200);
 
         @include respond-to('small') {
             display: none;
         }
+    }
+
+    &__mobile-title {
+        margin-left: 20px;
+        font-size: 20px;
     }
 }
