--- a/src/app/components/page-photos/page-photos.component.scss
+++ b/src/app/components/page-photos/page-photos.component.scss
@@ -1,30 +1,45 @@
 @import '../../../styles/search-filters';
 @import '../../../styles/photos-list';
+@import '../../../styles/special/mixins';
 
-:host {
-    .page-photos {
-        &__data {
-            display: flex;
-            flex-direction: column;
+.page-photos {
+    &__data {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__content {
+        position: relative;
+        min-height: 150px;
+    }
+
+    &__loader-overlay {
+        position: absolute;
+        inset: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__pagination-wrapper {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .photos-list {
+        --row-items: 2;
+
+        @include respond-to('small') {
+            --row-items: 3;
         }
 
-        &__content {
-            position: relative;
-            min-height: 150px;
+        @include respond-to('medium') {
+            --row-items: 4;
         }
 
-        &__loader-overlay {
-            position: absolute;
-            inset: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        &__pagination-wrapper {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
+        @include respond-to('large') {
+            --row-items: 6;
         }
     }
 }
