updated not found page

--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,7 @@
 <div class="page__content page-not-found__content">
     This page doesn't exist ¯\_(ツ)_/¯
+
+    <div class="page-not-found__nav">
+        Go to <a [routerLink]="['/dashboard']">Dashboard</a>
+    </div>
 </div>
