--- a/src/styles/statistics.scss
+++ b/src/styles/statistics.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     &__entries {
-        padding-left: 0;
+        padding: 15px 0;
         margin-bottom: 0;
         list-style-type: none;
         display: flex;
@@ -18,7 +18,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        padding: 30px 10px;
+        padding: 10px;
     }
 
     &__number {
