fixed lint styles

--- a/src/app/components/album-entry/album-entry.component.scss
+++ b/src/app/components/album-entry/album-entry.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/album-entry-images';
+@import "../../../styles/album-entry-images";
 
 :host {
     background: var(--bs-gray-100);
