--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -87,9 +87,13 @@
 }
 
 @keyframes loader {
-    0%, 20%, 80%, 100% {
+    0%,
+    20%,
+    80%,
+    100% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.5);
     }
