--- a/src/app/components/page-dashboard/page-dashboard.component.scss
+++ b/src/app/components/page-dashboard/page-dashboard.component.scss
@@ -1,10 +1,9 @@
-@import '../../../styles/main-banner.scss';
-@import '../../../styles/responsive-tiles';
-@import '../../../styles/scrollable-container';
-@import '../../../styles/statistics';
-@import '../../../styles/column-list';
-@import '../../../styles/photos-list';
-
+@import "../../../styles/main-banner.scss";
+@import "../../../styles/responsive-tiles";
+@import "../../../styles/scrollable-container";
+@import "../../../styles/statistics";
+@import "../../../styles/column-list";
+@import "../../../styles/photos-list";
 
 :host {
     .page-dashboard {
