--- a/src/app/components/page-posts/page-posts.component.scss
+++ b/src/app/components/page-posts/page-posts.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/posts-table';
-@import '../../../styles/search-filters';
+@import "../../../styles/posts-table";
+@import "../../../styles/search-filters";
 
 :host {
     .page-posts {
