--- a/src/app/components/page-user/page-user.component.scss
+++ b/src/app/components/page-user/page-user.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/user-banner';
-@import '../../../styles/scrollable-container';
-@import '../../../styles/responsive-tiles';
-@import '../../../styles/column-list';
+@import "../../../styles/user-banner";
+@import "../../../styles/scrollable-container";
+@import "../../../styles/responsive-tiles";
+@import "../../../styles/column-list";
