--- a/src/styles/special/mixins.scss
+++ b/src/styles/special/mixins.scss
@@ -1,7 +1,7 @@
 $breakpoints: (
-    'small':  767px,
-    'medium': 992px,
-    'large':  1200px,
+    "small":  767px,
+    "medium": 992px,
+    "large":  1200px,
 ) !default;
 
 /// Mixin to manage responsive breakpoints
@@ -25,7 +25,7 @@ $breakpoints: (
 }
 
 @mixin retina() {
-    @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    @media only screen and (min-device-pixel-ratio: 2),
         only screen and (min--moz-device-pixel-ratio: 2),
         only screen and (-o-min-device-pixel-ratio: 2/1),
         only screen and (min-device-pixel-ratio: 2),
