--- a/src/styles/user-banner.scss
+++ b/src/styles/user-banner.scss
@@ -10,7 +10,7 @@
     }
 
     &__description {
-        margin: 13px 0 0 0;
+        margin: 13px 0 0;
         font-size: 15px;
         color: rgb(var(--bs-gray-200) / 50%);
     }
