--- a/src/app/components/page-photos/page-photos.component.scss
+++ b/src/app/components/page-photos/page-photos.component.scss
@@ -1,6 +1,6 @@
-@import '../../../styles/search-filters';
-@import '../../../styles/photos-list';
-@import '../../../styles/special/mixins';
+@import "../../../styles/search-filters";
+@import "../../../styles/photos-list";
+@import "../../../styles/special/mixins";
 
 .page-photos {
     &__data {
@@ -30,15 +30,15 @@
     .photos-list {
         --row-items: 2;
 
-        @include respond-to('small') {
+        @include respond-to("small") {
             --row-items: 3;
         }
 
-        @include respond-to('medium') {
+        @include respond-to("medium") {
             --row-items: 4;
         }
 
-        @include respond-to('large') {
+        @include respond-to("large") {
             --row-items: 6;
         }
     }
