--- a/src/styles/albums-list.scss
+++ b/src/styles/albums-list.scss
@@ -4,7 +4,6 @@
 
     &__items {
         padding-left: 0;
-        margin: 0;
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
@@ -14,9 +13,7 @@
     &__entry {
         min-height: 150px;
         min-width: 0;
-        flex-grow: 0;
-        flex-shrink: 1;
-        flex-basis: calc(100% / var(--row-items));
+        flex: 0 1 calc(100% / var(--row-items));
         padding: var(--offset);
     }
 
