--- a/src/styles/photos-list.scss
+++ b/src/styles/photos-list.scss
@@ -8,7 +8,6 @@
 
     &__items {
         padding-left: 0;
-        margin: 0;
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
@@ -17,9 +16,7 @@
 
     &__entry {
         min-width: 0;
-        flex-grow: 0;
-        flex-shrink: 1;
-        flex-basis: calc(100% / var(--row-items));
+        flex: 0 1 calc(100% / var(--row-items));
         padding: var(--offset);
     }
 
