--- a/src/styles/statistics.scss
+++ b/src/styles/statistics.scss
@@ -13,10 +13,8 @@
     }
 
     &__entry {
-        flex-basis: calc(100% / var(--row-size));
-        flex-grow: 0;
-        flex-shrink: 1;
         display: flex;
+        flex: 0 1 calc(100% / var(--row-size));
         justify-content: center;
         align-items: flex-end;
         padding: 10px;
