--- a/src/app/components/page-photos/page-photos.component.html
+++ b/src/app/components/page-photos/page-photos.component.html
@@ -40,7 +40,7 @@
                         [totalPages]="totalPages$ | async"
                         [activePage]="activePage$ | async"
                         [radius]="3"
-                        (onGo)="go($event)">
+                        (go)="go($event)">
                     </app-pagination>
                 </div>
             </div>
