--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -98,7 +98,7 @@
                         [totalPages]="totalPages$ | async"
                         [activePage]="activePage$ | async"
                         [radius]="3"
-                        (onGo)="go($event)">
+                        (go)="go($event)">
                     </app-pagination>
                 </div>
             </div>
